# Engineer_Client

./: .gitignore  CMakeLists.txt  arm_description
config/: client_setting.json
include/: driver_mqtt.hpp  driver_urdf_renderer.hpp  driver_urdf_types.h  logger.hpp  trajectory_planner.hpp
scripts/: test.sh  test_arm_pose.sh  test_joint_plan.sh  test_pose_plan.sh
src/: demo_plan.cpp  driver_mqtt.cpp  driver_urdf_renderer.cpp  logger.cpp  main.cpp  trajectory_planner.cpp
